# hedging-desk

./: .gitignore  CLAUDE.md  README.md  justfile
.claude/: CLAUDE.md  hookify.block-env-bash.local.md  hookify.block-env-edits.local.md  hookify.block-push-to-main.local.md  hookify.block-workflow-edits-bash.local.md  hookify.block-workflow-edits.local.md  hookify.enforce-branch-naming.local.md  hookify.enforce-commit-convention.local.md  settings.json
.claude/agents/: architect.md  backend-worker.md  code-reviewer.md  debugger.md  devops-worker.md  docs-writer.md  explorer.md  frontend-worker.md  security-engineer.md  tester.md
.claude/hooks/: bash_guard.py
.github/workflows/: python.yml  rust.yml  schema-compat.yml  ui.yml
delta-one/: CLAUDE.md  Cargo.toml  d1.toml
delta-one/crates/d1/: Cargo.toml
delta-one/crates/d1-analytics/: Cargo.toml
delta-one/crates/d1-analytics/src/: lib.rs
delta-one/crates/d1-core/: Cargo.toml
delta-one/crates/d1-core/benches/: hot_path.rs
delta-one/crates/d1-core/proptest-regressions/: order.txt
delta-one/crates/d1-core/src/: cross.rs  error.rs  feed.rs  ids.rs  keeper.rs  lib.rs  market_data.rs  order.rs  target.rs
delta-one/crates/d1-gateway-fix/: Cargo.toml  initiator.cfg
delta-one/crates/d1-gateway-fix/src/: convert.rs  error.rs  lib.rs
delta-one/crates/d1-gateway-nats/: Cargo.toml
delta-one/crates/d1-gateway-nats/src/: convert.rs  error.rs  lib.rs
delta-one/crates/d1-netting/: Cargo.toml
delta-one/crates/d1-netting/benches/: netting.rs
delta-one/crates/d1-netting/src/: lib.rs
delta-one/crates/d1-posttrade/: Cargo.toml
delta-one/crates/d1-posttrade/src/: convert.rs  lib.rs  producer.rs
delta-one/crates/d1-refdata/: Cargo.toml
delta-one/crates/d1-refdata/src/: lib.rs
delta-one/crates/d1/src/: cycle.rs  feed.rs  lib.rs  main.rs  posttrade.rs
delta-one/crates/d1/tests/: crosses_round_trip.rs  fix_round_trip.rs  nats_round_trip.rs  netting_conservation.rs
delta-one/crates/sim/: Cargo.toml  acceptor.cfg
delta-one/crates/sim/src/: acceptor.rs  main.rs  refdata.rs  replay.rs  scenario.rs
deploy/: docker-compose.yml  nats.conf
docs/: ARCHITECTURE.md  GLOSSARY.md  PONYTAIL-DEBT.md  ROADMAP.md
docs/adr/: ADR-001-live-bus-nats.md  ADR-002-posttrade-kafka-avro.md  ADR-003-fix-engine.md  ADR-004-hot-path-and-wire.md  ADR-005-netting-internal-crosses.md  ADR-006-exotics-model-stack.md  ADR-007-monorepo-tooling.md  ADR-008-greeks-treatment.md  ADR-009-hedge-proposals-and-rho-transfer.md  ADR-010-tracker-analytics.md  ADR-011-ai-assistance.md  ADR-012-local-codegen-plugins.md  ADR-013-spsc-queue-choice.md
exo/: CLAUDE.md  exo.toml  pyproject.toml
exo/src/exo/: __init__.py  __main__.py
exo/src/exo/bus/: __init__.py
exo/tests/: test_bus_gen_imports.py  test_scaffold.py
protocol/: CLAUDE.md  buf.gen.yaml  nats-subjects.md
protocol/avro/: order_audit.avsc  posttrade_allocation.avsc  posttrade_cross.avsc  posttrade_trade.avsc  tracker_analytics.avsc
protocol/proto/: common.proto  live.proto
protocol/refdata/: universe.json
scripts/: README.md  demo.sh  gen-proto.sh  schema-check.sh
scripts/git-hooks/: pre-commit  pre-push
sim/: CLAUDE.md
sim/scenarios/: advanced-hedging.yaml  tracker-flow.yaml
ui/: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.test.tsx  App.tsx  gen.test.ts  main.tsx
