[project]
name = "exo"
version = "0.1.0"
description = "Exotics pricing and rehedging service (Phase 2). See exo/CLAUDE.md."
requires-python = ">=3.12"
dependencies = [
  "numpy==2.2.*",
  "scipy==1.15.*",          # Heston characteristic-function vanilla cross-check
  "nats-py==2.9.*",
  "protobuf==5.29.*",
  "pydantic==2.10.*",
  "tomli-w==1.1.*",
]

[dependency-groups]
dev = [
  "pytest==8.*",
  "pytest-asyncio==0.25.*",
  "mypy==1.14.*",
  "ruff==0.9.*",
  "hypothesis==6.*",        # property tests for fixed-point conversion & payoff invariants
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "ANN"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exo"]
