[package]
name = "d1-gateway-fix"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Populate only from the approved dependency table in delta-one/CLAUDE.md.
d1-core = { path = "../d1-core" }
quickfix = "0.2"
rtrb = "0.3"
thiserror = "2"
