[package]
name = "d1-gateway-nats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Populate only from the approved dependency table in delta-one/CLAUDE.md.
d1-core = { path = "../d1-core" }
prost = "0.14"
async-nats = { version = "0.49", default-features = false }
tokio = { version = "1", features = ["rt", "time"] }
futures-util = "0.3"
rtrb = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
