[package]
name = "d1-netting"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Populate only from the approved dependency table in delta-one/CLAUDE.md.
d1-core = { path = "../d1-core" }
thiserror = "2"

[dev-dependencies]
criterion = "0.5"
hdrhistogram = "7"
proptest = "1"

[[bench]]
name = "netting"
harness = false
