[package]
name = "d1-posttrade"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Populate only from the approved dependency table in delta-one/CLAUDE.md.
d1-core = { path = "../d1-core" }
d1-refdata = { path = "../d1-refdata" }
apache-avro = "0.21"
thiserror = "2"
uuid = { version = "1", features = ["v7"] }
rdkafka = { version = "0.39", default-features = false, features = ["cmake-build"] }
rtrb = "0.3"
