[package]
name = "d1-refdata"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Populate only from the approved dependency table in delta-one/CLAUDE.md.
d1-core = { path = "../d1-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
