[package]
name = "d1"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Populate only from the approved dependency table in delta-one/CLAUDE.md.
d1-core = { path = "../d1-core" }
d1-gateway-fix = { path = "../d1-gateway-fix" }
rtrb = "0.3"
anyhow = "1"
ctrlc = "3"
